--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -35,4 +35,10 @@
 
     </table>
     {% endfor %}
+    {% if prev_url %}
+    <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+    <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock %}
